# dynamic_environment

./: Astar.cpp  CMakeLists.txt  CliUtils.cpp  CliUtils.h  DataPaths.h  DstarLite.cpp  DstarLite.h  DynamicObstacle.cpp  DynamicObstacle.h  Field.cpp  Field.h  heuristic_functions.cpp  main.cpp  points.txt
data/: changes.txt  map.txt  points.txt
global_planning/: Astar.cpp  Astar.h  DstarLite.cpp  DstarLite.h  Field.cpp  Field.h  heuristic_functions.cpp  heuristic_functions.h
local_planning/: MPPI.cpp  MPPI.h  RMPPI.cpp  RMPPI.h
results/: statistics.txt
results/0_dst/: dynamic_5000_1.txt  dynamic_5000_10.txt  dynamic_5000_11.txt  dynamic_5000_12.txt  dynamic_5000_13.txt  dynamic_5000_14.txt  dynamic_5000_15.txt  dynamic_5000_2.txt  dynamic_5000_3.txt  dynamic_5000_4.txt  dynamic_5000_5.txt  dynamic_5000_6.txt  dynamic_5000_7.txt  dynamic_5000_8.txt  dynamic_5000_9.txt  dynamic_change_5000_1.txt  dynamic_change_5000_10.txt  dynamic_change_5000_11.txt  dynamic_change_5000_12.txt  dynamic_change_5000_13.txt  dynamic_change_5000_14.txt  dynamic_change_5000_15.txt  dynamic_change_5000_2.txt  dynamic_change_5000_3.txt  dynamic_change_5000_4.txt  dynamic_change_5000_5.txt  dynamic_change_5000_6.txt  dynamic_change_5000_7.txt  dynamic_change_5000_8.txt  dynamic_change_5000_9.txt  (+17 more)
results/cmd/: all.sh  (+10 more)
test_generation/: Generators.cpp  Generators.h  TestGeneration.cpp  TestGeneration.h
tests/: DynamicTests.cpp  DynamicTests.h  LocalDynamicTests.cpp  LocalDynamicTests.h  LocalStaticTests.cpp  LocalStaticTests.h  MetricsUtils.h  StaticTests.cpp  StaticTests.h  TestUtils.h
(+322 files in other folders)
